examples/fixtures/httpbin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app.kubernetes.io/name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app.kubernetes.io/name: httpbin
spec:
  ports:
  - name: http
    port: 80
  selector:
    app.kubernetes.io/name: httpbin

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpbin
  labels:
    app.kubernetes.io/name: httpbin
spec:
  virtualhost:
    fqdn: httpbin.projectcontour.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: httpbin
          port: 80
